changing picture type jpeg to png

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -78,7 +78,8 @@ flutter:
     - assets/shimu16.jpeg
     - assets/shimu18.jpeg
     - assets/shimu19.jpeg
-    - assets/shimu20.jpeg
+    - assets/shimu20.png
+    - assets/shimu21.png
 
     - assets/liakot1.jpeg
     - assets/liakot2.jpeg
